--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.12.0)
-project(project_title LANGUAGES CXX C)
+project(main LANGUAGES CXX C)
 
-include(../common/cmake-common.cmake)
+include(./common/cmake-common.cmake)
 
-add_executable(lab-01 src/lab-01.cpp src/Poisson1D.cpp)
-deal_ii_setup_target(lab-01)
+include_directories(include)
+
+FILE(GLOB SRC_FILES "src/*.cpp")
+add_executable(main ${SRC_FILES})
+
+deal_ii_setup_target(main)
