--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ include(./common/cmake-common.cmake)
 
 include_directories(include src)
 
-SET(CMAKE_CXX_FLAGS  "-g -Wall -Wextra")
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
+if(COMPILER_SUPPORTS_MARCH_NATIVE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+endif()
 
 FILE(GLOB SRC_FILES "src/main.cpp" "src/DTR.cpp")
 FILE(GLOB SRC_FILES_MF "src/main_mf.cpp")
